# image_colored_text

./: Cargo.toml  README.md
src/: lib.rs  ttp.rs
src/draw/: coord.rs  mod.rs  multi_line.rs  single_line.rs
src/test/: commons.rs  font.rs  mod.rs  multiline_test.rs  singleline_test.rs
src/text/: line.rs  mod.rs  paragraph.rs
