[package]
name = "image_colored_text"
version = "0.1.3"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "A basic extension of the image/imageproc crates for writing multiline colored text"

readme = "README.md"
repository = "https://github.com/erwanM974/image_colored_text"
homepage = "https://github.com/erwanM974/image_colored_text"

keywords = ["image", "color", "text"]

[dependencies]
image = "0.25.0"                                # for rendering
imageproc = "0.25.0"                            # ...
ab_glyph = "0.2.23"                              # for fonts and scale for text in images
